fix: Change contact icon

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -5,6 +5,7 @@ import Archive from '../images/icons/folder-zip-fill.svg';
 import Blog from '../images/icons/rss-fill.svg';
 import Tag from '../images/icons/tag-2-fill.svg';
 import About from '../images/icons/user-1-fill.svg';
+import Contact from '../images/icons/comment-2-fill.svg'
 ---
 
 <nav class="navbar justify-center bg-base-300">
@@ -20,6 +21,6 @@ import About from '../images/icons/user-1-fill.svg';
     <li><a href="/tags"><Image alt="mingcute:tag-2-fill" src={Tag} />Tags</a></li>
     <li><a href="/archive"><Image alt="mingcute:folder-zip-fill" src={Archive} />Archive</a></li>
     <li><a href="/about"><Image alt="mingcute:user-1-fill" src={About} />About</a></li>
-    <li><a href="/contact"><Image alt="mingcute:rss-fill" src={Blog} />Contact</a></li>
+    <li><a href="/contact"><Image alt="mingcute:rss-fill" src={Contact} />Contact</a></li>
   </ul>
 </nav>
