--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,19 @@
 ---
+import Head from '../layouts/Head.astro';
+import Navbar from '../layouts/Navbar.astro';
+import Footer from '../layouts/Footer.astro';
+import { getCollection } from 'astro:content';
 
+const allBlogPosts = await getCollection('posts');
 ---
+
+<html lang="en">
+  <Head title="Shibe Drill | Official Site" description="Shibe Drill's Personal Website" />
+  <body class="">
+    <Navbar />
+    <main>
+
+    </main>
+    <Footer />
+  </body>
+</html>
