style: Prettier format

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -5,7 +5,7 @@ import Archive from '../images/icons/folder-zip-fill.svg';
 import Blog from '../images/icons/rss-fill.svg';
 import Tag from '../images/icons/tag-2-fill.svg';
 import About from '../images/icons/user-1-fill.svg';
-import Contact from '../images/icons/comment-2-fill.svg'
+import Contact from '../images/icons/comment-2-fill.svg';
 ---
 
 <nav class="navbar justify-center bg-base-300">
