--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Head from '../layouts/Head.astro';
 import Navbar from '../layouts/Navbar.astro';
 import Footer from '../layouts/Footer.astro';
-import Render from '../components/PostPreview.astro'
+import Render from '../components/PostPreview.astro';
 import { getCollection } from 'astro:content';
 
 const posts = await getCollection('posts');
@@ -13,17 +13,21 @@ const posts = await getCollection('posts');
   <body class="">
     <Navbar />
     <main id="posts" class="my-6 flex gap-4 align-center justify-center flex-wrap">
-      {posts.map((post, index: number) => (
-        <div class="card bg-base-300 w-1/2 shadow-xl">
-          <div class="card-body">
-            <h2 class="card-title text-2xl">{post.data.title}</h2>
-            <Render post={post}/>
-            <div class="card-actions">
-              <a class="btn btn-sm btn-primary" href=`/post/${post.id}`>Read</a>
+      {
+        posts.map((post, index: number) => (
+          <div class="card bg-base-300 w-1/2 shadow-xl">
+            <div class="card-body">
+              <h2 class="card-title text-2xl">{post.data.title}</h2>
+              <Render post={post} />
+              <div class="card-actions">
+                <a class="btn btn-sm btn-primary" href={`/post/${post.id}`}>
+                  Read
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-      ))}
+        ))
+      }
     </main>
     <Footer />
   </body>
