--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Head from '../layouts/Head.astro';
 import Navbar from '../layouts/Navbar.astro';
 import Footer from '../layouts/Footer.astro';
 import Render from '../components/PostPreview.astro';
+import Prose from '../components/Prose.astro';
 import { getCollection } from 'astro:content';
 
 const posts = await getCollection('posts');
@@ -14,11 +15,13 @@ const posts = await getCollection('posts');
     <Navbar />
     <main id="posts" class="my-6 flex gap-4 align-center justify-center flex-wrap">
       {
-        posts.map((post, index: number) => (
+        posts.map((post: any, index: number) => (
           <div class="card bg-base-300 w-1/2 shadow-xl">
             <div class="card-body">
               <h2 class="card-title text-2xl">{post.data.title}</h2>
-              <Render post={post} />
+              <Prose>
+                <Render post={post} />
+              </Prose>
               <div class="card-actions">
                 <a class="btn btn-sm btn-primary" href={`/post/${post.id}`}>
                   Read
