--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection, render } from 'astro:content';
+import Prose from '../../components/Prose.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('posts');
@@ -20,15 +21,17 @@ const { Content } = await render(post);
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   </head>
   <body>
-    <article>
-      <h1 class="text-4xl">{post.data.title}</h1>
-      <h2 class="text-2xl">
-        Published {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
-      </h2>
-      <div id="tags">
-        {post.data.tags.map((tag: string) => <span class="mx-0.5">{tag}</span>)}
-      </div>
-      <Content />
-    </article>
+    <Prose>
+      <article>
+        <h1 class="text-4xl">{post.data.title}</h1>
+        <h2 class="text-2xl">
+          Published {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
+        </h2>
+        <div id="tags">
+          {post.data.tags.map((tag: string) => <span class="mx-0.5">{tag}</span>)}
+        </div>
+        <Content />
+      </article>
+    </Prose>
   </body>
 </html>
