--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const posts = await getCollection('posts');
               </Prose>
               <div class="card-actions">
                 <a class="btn btn-sm btn-primary" href={`/post/${post.id}`}>
-                  Read
+                  Read More
                 </a>
               </div>
             </div>
