style: Prettier format

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,13 @@
 <div id="copyright" class="text-center text-sm mb-6 lg:mx-0 mx-6">
   <p>© Copyright shibedrill {new Date().getFullYear()}. All posts licensed under CC-BY-NC-SA.</p>
-<p>Developed by <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.arithefirst.com/">April Hall</a> under the <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL 3.0</a></p>
+  <p>
+    Developed by <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.arithefirst.com/"
+      >April Hall</a
+    > under the <a
+      class="underline text-primary"
+      target="_blank"
+      rel="norefer"
+      href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL 3.0</a
+    >
+  </p>
 </div>
