feat: Create About Me page

--- a/src/layouts/StaticMD.astro
+++ b/src/layouts/StaticMD.astro
@@ -14,6 +14,7 @@ import Prose from '../components/Prose.astro';
           <hr class="border-white border-1 my-4 w-48" />
           <slot name="body" />
         </Prose>
+        <slot name="image" />
       </div>
     </div>
   </main>
