fix: Prevent overscroll

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets';
 import Cheesecake from '../images/cheesecake.png';
 ---
 
-<html lang="en">
+<html lang="en" class="overscroll-y-none">
   <Head title="Shibe Drill | About Me" description="Shibe Drill's Personal Website" />
   <StaticMD>
     <div slot="header">About Me</div>
