--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,7 @@ import StaticMD from '../layouts/StaticMD.astro';
 import Content from '../content/contact.md';
 ---
 
-<html lang="en">
+<html lang="en" class="overscroll-y-none">
   <Head title="Shibe Drill | Contact Me" description="Shibe Drill's Personal Website" />
   <StaticMD>
     <div slot="header">Contact Me</div>
