--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,19 @@ posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
     <Navbar />
     <main id="posts" class="my-6 flex gap-4 align-center justify-center flex-wrap">
       {
-        // Do not try to add type saftey here, the astro compiler fucking shits itself
+        // Do not try to add type safety here, the astro compiler fucking shits itself
         posts.map((post) => (
           <div class="card bg-base-300 lg:w-1/2 w-full lg:mx-0 mx-6 shadow-xl">
             <div class="card-body">
               <h2 class="card-title text-2xl">{post.data.title}</h2>
+              <div id="post-info">
+                {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
+                <span class="mx-2">-</span>
+                {post.data.tags.map((tag) => (
+                  <span class="badge badge-accent mr-1 text-accent-content">#{tag} </span>
+                ))}
+                <hr class="border-1 border-white mt-3" />
+              </div>
               <Prose>
                 <Render post={post} />
               </Prose>
