--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,4 @@
-<div id="copyright" class="text-center text-sm mb-6 lg:mx-0 mx-6">
+<div id="copyright" class="text-center text-sm py-6 lg:mx-0 px-6 bg-base-300">
   <p>© Copyright shibedrill {new Date().getFullYear()}. All posts licensed under CC-BY-NC-SA.</p>
   <p>
     Developed by <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.arithefirst.com/"
