--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,7 @@ import Cheesecake from '../images/cheesecake.png';
 <html lang="en" class="overscroll-y-none">
   <Head title="Shibe Drill | About Me" description="Shibe Drill's Personal Website" />
   <StaticMD>
-    <div slot="header">About Me</div>
+    <div slot="header"><h2 class="card-title text-2xl">About Me</h2></div>
     <div slot="body">
       <Content />
     </div>
