--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Content from '../content/contact.md';
 <html lang="en" class="overscroll-y-none">
   <Head title="Shibe Drill | Contact Me" description="Shibe Drill's Personal Website" />
   <StaticMD>
-    <div slot="header">Contact Me</div>
+    <div slot="header"><h2 class="card-title text-2xl">Contact Me</h2></div>
     <div slot="body">
       <Content />
     </div>
