style: Prettier format

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -9,7 +9,7 @@ const { title, description } = Astro.props;
 
 <head>
   <title>{title}</title>
-  <meta name="darkreader-lock">
+  <meta name="darkreader-lock" />
   <meta name="charset" content="utf-8" />
   <meta name="og:title" content={title} />
   <meta name="twitter:title" content={title} />
