fix: Force align footer to the bottom of the page

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,4 +1,4 @@
-<div id="copyright" class="text-center text-sm py-6 lg:mx-0 px-6 bg-base-300">
+<footer id="copyright" class="text-center text-sm py-6 lg:mx-0 px-6 bg-base-300">
   <p>© Copyright shibedrill {new Date().getFullYear()}. All posts licensed under CC-BY-NC-SA.</p>
   <p>
     Developed by <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.arithefirst.com/"
@@ -10,4 +10,4 @@
       href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL 3.0</a
     >
   </p>
-</div>
+</footer>
