--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -1,8 +1,6 @@
 ---
 import Head from '../layouts/Head.astro';
-import Navbar from '../layouts/Navbar.astro';
-import Footer from '../layouts/Footer.astro';
-import Prose from '../components/Prose.astro';
+import Body from '../layouts/Body.astro';
 import { getCollection } from 'astro:content';
 const posts = await getCollection('posts');
 posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
@@ -10,10 +8,9 @@ posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
 
 <html lang="en" class="overscroll-y-none">
   <Head title="Shibe Drill | Archive" description="Shibe Drill's Personal Website" />
-  <body>
-    <Navbar />
-    <main class="my-6 flex gap-4 align-center justify-center flex-wrap">
-      <div class="card bg-base-300 lg:w-1/2 w-full lg:mx-0 mx-6 shadow-xl">
+  <Body>
+    <main slot="content" class="my-6 flex gap-4 align-center justify-center flex-wrap flex-grow">
+      <div class="card bg-base-300 lg:w-1/2 w-full h-fit lg:mx-0 mx-6 shadow-xl">
         <div class="card-body">
           <h2 class="card-title text-2xl">Archive</h2>
           <hr class="border-white border-1 my-4" />
@@ -40,6 +37,5 @@ posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
         </div>
       </div>
     </main>
-    <Footer />
-  </body>
+  </Body>
 </html>
