--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -23,8 +23,8 @@ posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
                       <span class="text-accent">
                         {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
                       </span>
-                      <span class="text-base-content">::</span> {post.data.title}
-                      <span class="text-base-content">::</span>
+                      <span class="text-base-content px-1.5">::</span> {post.data.title}
+                      <span class="text-base-content px-1.5">::</span>
                     </a>
                     {post.data.tags.map((tag) => (
                       <span class="badge badge-accent mr-1 text-accent-content">#{tag} </span>
