--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -1,7 +1,7 @@
 ---
 import { type CollectionEntry, getCollection, render } from 'astro:content';
 import StaticMD from '../../layouts/StaticMD.astro';
-import Badge from '../../components/Badge.astro'
+import Badge from '../../components/Badge.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('posts');
