--- a/src/layouts/StaticMD.astro
+++ b/src/layouts/StaticMD.astro
@@ -4,7 +4,7 @@ import Body from './Body.astro';
 ---
 
 <Body>
-  <main slot="content" class="my-6 flex gap-4 align-center justify-center flex-wrap flex-grow">
+  <main slot="content" class="my-6 mx-6 flex gap-4 align-center justify-center flex-wrap flex-grow">
     <div class="card bg-base-300 lg:w-3/4 w-full lg:mx-0 mx-6 shadow-xl">
       <div class="card-body">
         <Prose>
