fix: Inconsistend tab title formatting on /post/*

--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -17,9 +17,7 @@ const { Content } = await render(post);
 
 <html lang="en" class="overscroll-y-none">
   <head>
-    <title>{post.data.title}</title>
-    <meta name="charset" content="utf-8" />
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <title>Shibe Drill | {post.data.title}</title>
   </head>
   <StaticMD>
     <Content slot="body" />
