fix: Sort /tags/* by date

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -18,6 +18,8 @@ export async function getStaticPaths() {
 const posts = await getCollection('posts', ({ data }) => {
   return data.tags.includes(tag);
 });
+
+posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date))
 ---
 
 <html lang="en" class="overscroll-y-none">
