style: Prettier format

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -19,7 +19,7 @@ const posts = await getCollection('posts', ({ data }) => {
   return data.tags.includes(tag);
 });
 
-posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date))
+posts.sort((a, b) => Date.parse(b.data.date) - Date.parse(a.data.date));
 ---
 
 <html lang="en" class="overscroll-y-none">
