--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -6,6 +6,7 @@ import Blog from '../images/icons/rss-fill.svg';
 import Tag from '../images/icons/tag-2-fill.svg';
 import About from '../images/icons/user-1-fill.svg';
 import Contact from '../images/icons/comment-2-fill.svg';
+import Code from '../images/icons/comment-2-fill.svg';
 ---
 
 <nav class="navbar justify-center bg-base-300">
@@ -22,5 +23,9 @@ import Contact from '../images/icons/comment-2-fill.svg';
     <li><a href="/archive"><Image alt="mingcute:folder-zip-fill" src={Archive} />Archive</a></li>
     <li><a href="/about"><Image alt="mingcute:user-1-fill" src={About} />About</a></li>
     <li><a href="/contact"><Image alt="mingcute:rss-fill" src={Contact} />Contact</a></li>
+    <li>
+      <a href="https://github.com/arithefirst/shibedrill-homepage"
+        ><Image alt="mingcute:code-fill" src={Code} />Source Code</a>
+    </li>
   </ul>
 </nav>
