fix: Open sourcecode in new tab

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -24,8 +24,9 @@ import Code from '../images/icons/comment-2-fill.svg';
     <li><a href="/about"><Image alt="mingcute:user-1-fill" src={About} />About</a></li>
     <li><a href="/contact"><Image alt="mingcute:rss-fill" src={Contact} />Contact</a></li>
     <li>
-      <a href="https://github.com/arithefirst/shibedrill-homepage"
-        ><Image alt="mingcute:code-fill" src={Code} />Source Code</a>
+      <a href="https://github.com/arithefirst/shibedrill-homepage" rel="nofollow norefer" target="_blank"
+        ><Image alt="mingcute:code-fill" src={Code} />Source Code</a
+      >
     </li>
   </ul>
 </nav>
