fix: Wrong source code icon

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -6,7 +6,7 @@ import Blog from '../images/icons/rss-fill.svg';
 import Tag from '../images/icons/tag-2-fill.svg';
 import About from '../images/icons/user-1-fill.svg';
 import Contact from '../images/icons/comment-2-fill.svg';
-import Code from '../images/icons/comment-2-fill.svg';
+import Code from '../images/icons/code-fill.svg';
 ---
 
 <nav class="navbar justify-center bg-base-300">
