--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -9,6 +9,12 @@ const { title, description } = Astro.props;
 
 <head>
   <title>{title}</title>
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Shibe Drill's Official Site"
+    href={new URL("rss.xml", Astro.site)}
+  />
   <meta name="darkreader-lock" />
   <meta name="charset" content="utf-8" />
   <meta name="og:title" content={title} />
