--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -13,7 +13,7 @@ const { title, description } = Astro.props;
     rel="alternate"
     type="application/rss+xml"
     title="Shibe Drill's Official Site"
-    href={new URL("rss.xml", Astro.site)}
+    href={new URL('rss.xml', Astro.site)}
   />
   <meta name="darkreader-lock" />
   <meta name="charset" content="utf-8" />
