feat: Optional font change to Hack

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -29,3 +29,13 @@ const { title, description } = Astro.props;
   </slot>
   <slot name="extra-content" />
 </head>
+
+<style>
+  @font-face {
+    font-family: 'Hack-Term-Font';
+    src: url('/fonts/Hack-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+</style>
