--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -9,12 +9,6 @@ const { title, description } = Astro.props;
 
 <head>
   <title>{title}</title>
-  <link
-    rel="alternate"
-    type="application/rss+xml"
-    title="Shibe Drill's Official Site"
-    href={new URL('rss.xml', Astro.site)}
-  />
   <meta name="darkreader-lock" />
   <meta name="charset" content="utf-8" />
   <meta name="og:title" content={title} />
@@ -22,10 +16,17 @@ const { title, description } = Astro.props;
   <meta name="description" content={description} />
   <meta property="og:description" content={description} />
   <meta name="twitter:description" content={description} />
+  <a rel="me" href="https://fosstodon.org/@shibedrill1">Mastodon</a>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <slot name="favicon">
     <link rel="icon" href="/cheesecake.png" />
   </slot>
   <slot name="extra-content" />
+  <link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Shibe Drill's Official Site"
+    href={new URL('rss.xml', Astro.site)}
+  />
 </head>
