fix: Broken markdown features

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,8 +1,3 @@
-<div
-  class="prose-a:link-primary prose-a:underline prose-p:text-base-content prose-p:mb-3
-   prose-ul:list-disc prose-ul:list-inside prose-ul:mb-3 prose-pre:p-4 prose-pre:rounded-lg
-   prose-pre:text-base-content prose-pre:mt-2 prose-ol:list-decimal prose-ol:list-oudside
-   prose-ol:px-4 prose-ol:mb-3"
->
+<div class="prose text-base-content max-w-none">
   <slot />
 </div>
