--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,6 +1,6 @@
 <footer id="copyright" class="text-center text-sm max-w-dvw py-6 lg:px-0 px-6 bg-base-300">
   <p>© Copyright shibedrill {new Date().getFullYear()}. All posts licensed under CC-BY-NC-SA.</p>
-  <p>
+  <p class="print:hidden">
     Developed by <a class="underline text-primary" target="_blank" rel="norefer" href="https://www.arithefirst.com/"
       >April Hall</a
     > under the <a
