--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -9,14 +9,14 @@ import Contact from '../images/icons/comment-2-fill.svg';
 import Code from '../images/icons/code-fill.svg';
 ---
 
-<nav class="navbar justify-center bg-base-300">
+<nav class="navbar justify-center bg-base-300 print:hidden">
   <a href="/" class="btn btn-ghost text-lg">
     <Image alt="Cheesecake, the harbinger of the end times" src={Cheesecake} class="h-10 w-10" />
     shibedrill.site
   </a>
 </nav>
 
-<nav class="flex justify-center bg-base-200">
+<nav class="flex justify-center bg-base-200 print:hidden">
   <ul class="menu menu-horizontal justify-center">
     <li><a href="/"><Image alt="mingcute:rss-fill" src={Blog} />Blog</a></li>
     <li><a href="/tags"><Image alt="mingcute:tag-2-fill" src={Tag} />Tags</a></li>
