--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -5,6 +5,9 @@ import Badge from '../../components/Badge.astro';
 import Body from '../../layouts/Body.astro';
 import Prose from '../../components/Prose.astro';
 import NextPrev from '../../components/NextPrev.svelte';
+import ViewCounter from '../../components/ViewCounter.svelte';
+import BigOlEyeball from '../../images/icons/eye-fill.svg';
+import { Image } from 'astro:assets';
 
 const posts = await getCollection('posts');
 
@@ -28,16 +31,21 @@ const { Content } = await render(post);
     <main slot="content" class="print:m-0 my-6 mx-6 flex gap-4 align-center justify-center flex-wrap flex-grow">
       <div class="card bg-base-300 lg:w-1/2 print:w-full w-full lg:mx-0 shadow-xl print:shadow-none">
         <div class="card-body">
-          <div id="post-info">
-            <h4 class="print:block hidden mb-2">
-              This post is originally from <a href="https://shibedrill.site" class="underline font-bold"
-                >shibedrill.site</a
-              >
-            </h4>
-            <h2 class="card-title text-2xl mb-2">{post.data.title}</h2>
-            {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
-            <span class="mx-2 print:hidden">-</span>
-            {post.data.tags.map((tag) => <Badge class="print:hidden" tag={tag} />)}
+          <div id="post-info" class="flex flex-row">
+            <div>
+              <h4 class="print:block hidden mb-2">
+                This post is originally from <a href="https://shibedrill.site" class="underline font-bold"
+                  >shibedrill.site</a
+                >
+              </h4>
+              <h2 class="card-title text-2xl mb-2">{post.data.title}</h2>
+              {post.data.date.toLocaleString('en-US', { year: 'numeric', month: 'long', day: 'numeric' })}
+              <span class="mx-2 print:hidden">-</span>
+              {post.data.tags.map((tag) => <Badge class="print:hidden" tag={tag} />)}
+            </div>
+            <div class="badge badge-primary ml-auto text-accent-content">
+              <ViewCounter client:load />
+            </div>
           </div>
           <hr class="border-white border-1 my-4 print:m-0" />
           <Prose>
